<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/item_week_weather_width"
    android:layout_height="@dimen/item_week_weather_height"
    android:layout_marginEnd="@dimen/indent_8"
    app:cardBackgroundColor="@color/primaryColor"
    app:cardCornerRadius="@dimen/item_hour_corner_radius">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/tvItemTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/time_example"/>

        <ImageView
            android:id="@+id/ivItemTimeWeatherIcon"
            android:layout_width="@dimen/item_hour_icon_size"
            android:layout_height="@dimen/item_hour_icon_size"
            android:src="@drawable/ic_cloudy"
            android:contentDescription="@string/weather_icon_desc"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/tvItemTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/temperature_example"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>