<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/indent_32"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnCityName"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_name_with_country"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="@dimen/main_settings_button_size"
        android:layout_height="@dimen/main_settings_button_size"
        android:src="@drawable/ic_settings"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:layout_constraintBottom_toBottomOf="@+id/btnCityName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCityName"
        android:contentDescription="@string/settings_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMainCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/indent_32"
        android:layout_marginBottom="@dimen/indent_16"
        app:layout_constraintTop_toBottomOf="@id/btnCityName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnOpenInYandex"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="@dimen/main_card_corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/indent_32">

            <ImageView
                android:id="@+id/ivMainWeatherIcon"
                android:layout_width="@dimen/main_weather_icon_size"
                android:layout_height="@dimen/main_weather_icon_size"
                android:src="@drawable/ic_cloud"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWeatherTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_label_example"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_32"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivMainWeatherIcon" />

            <TextView
                android:id="@+id/tvDateOfWeatherLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_label_example"
                android:textColor="@color/primarySecondTextColor"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWeatherTypeLabel" />

            <TextView
                android:id="@+id/tvMainTemperatureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_example"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_72"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnOpenInYandex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_in_yandex"
        app:layout_constraintBottom_toTopOf="@id/tvToday"
        app:layout_constraintEnd_toEndOf="@+id/cvMainCard"
        app:layout_constraintStart_toStartOf="@+id/btnCityName" />

    <LinearLayout
        android:id="@+id/llDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <include layout="@layout/item_time_weather" />
        <include layout="@layout/item_time_weather" />
        <include layout="@layout/item_time_weather" />
        <include layout="@layout/item_time_weather" />
        <include layout="@layout/item_time_weather" />
        <include layout="@layout/item_time_weather" />
        <include layout="@layout/item_time_weather" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTimeWeather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_time_weather" />

    <TextView
        android:id="@+id/tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/indent_8"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/today_label"
        app:layout_constraintBottom_toTopOf="@id/rvTimeWeather"
        app:layout_constraintStart_toStartOf="@id/rvTimeWeather" />

    <TextView
        android:id="@+id/tvNextDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/indent_8"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:text="@string/next_7_days_label"
        app:layout_constraintBottom_toTopOf="@id/rvTimeWeather"
        app:layout_constraintEnd_toEndOf="@id/rvTimeWeather" />

</androidx.constraintlayout.widget.ConstraintLayout>