<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_day_details_height"
    android:layout_marginBottom="@dimen/indent_8"
    app:cardBackgroundColor="@color/primaryColor"
    app:cardCornerRadius="@dimen/item_hour_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/indent_8"
        android:paddingStart="@dimen/indent_16"
        android:paddingEnd="@dimen/indent_16">

        <ImageView
            android:id="@+id/ivItemTimeWeatherIcon"
            android:layout_width="@dimen/item_hour_icon_size"
            android:layout_height="@dimen/item_hour_icon_size"
            android:contentDescription="@string/weather_icon_desc"
            android:src="@drawable/ic_cloudy"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_example"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_example"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
